--- a/HotelManagement/Views/Pages/DirectorPage.xaml
+++ b/HotelManagement/Views/Pages/DirectorPage.xaml
@@ -35,7 +35,8 @@
                 <DatePicker Margin="10 2" Grid.Column="1" Grid.Row="0" SelectedDate="{Binding Start, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></DatePicker>
                 <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="1">Конец</TextBlock>
                 <DatePicker Margin="10 2" Grid.Column="1" Grid.Row="1" SelectedDate="{Binding End, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></DatePicker>
-                <Button Grid.Column="2" Grid.RowSpan="2" Height="40" Margin="5 3"  VerticalAlignment="Center" HorizontalContentAlignment="Stretch" BorderBrush="White" Command="{Binding GerReport}">Получить отчет</Button>
+                <Button Grid.Column="2" Height="35" Margin="5 3"  VerticalAlignment="Center" HorizontalContentAlignment="Stretch" BorderBrush="White" Command="{Binding GetReport}">Получить отчет</Button>
+                <Button Grid.Column="2" Grid.Row="1" Height="35" Margin="5 3"  VerticalAlignment="Center" HorizontalContentAlignment="Stretch" BorderBrush="White" Command="{Binding SaveReport}">Сохранить отчет</Button>
                 <TextBlock Grid.Column="3" TextAlignment="Right" Grid.RowSpan="2" VerticalAlignment="Center" Margin="5 3" Style="{DynamicResource MaterialDesignTextBlock}" Text="{Binding Username}"></TextBlock>
             </Grid>
         </materialDesign:Card>
