--- a/HotelManagement/Views/Pages/CheckInPage.xaml
+++ b/HotelManagement/Views/Pages/CheckInPage.xaml
@@ -60,6 +60,7 @@
                                 VerticalAlignment="Center"
                                 Margin="5">Д/н</TextBlock>
                             <DatePicker
+                                IsEnabled="{Binding IsEditing}"
                             Width="165"
                             SelectedDate="{Binding StartDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             DisplayDate="{Binding StartDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -85,6 +86,7 @@
                             </DatePicker>
                         </StackPanel>
                         <ComboBox
+                            IsEnabled="{Binding IsEditing}"
                             ItemsSource="{Binding RoomTypes}"
                             DisplayMemberPath="TypeName"
                             SelectedItem="{Binding CurrentRoomType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -95,6 +97,7 @@
                         IsEditable="False">
                         </ComboBox>
                         <ComboBox
+                            IsEnabled="{Binding IsEditing}"
                             ItemsSource="{Binding AvailableRominess}"
                             DisplayMemberPath="NumberString"
                             SelectedItem="{Binding CurrentRoominess, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -105,6 +108,7 @@
                         IsEditable="False">
                         </ComboBox>
                         <ComboBox
+                            IsEnabled="{Binding IsEditing}"
                             SelectedItem="{Binding CurrentRoom, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             ItemsSource="{Binding FreeRooms}"
                             DisplayMemberPath="RoomNumber"
