--- a/HotelManagement/Views/Pages/GuestPage.xaml
+++ b/HotelManagement/Views/Pages/GuestPage.xaml
@@ -25,7 +25,7 @@
                     Margin="5 2"
                     VerticalAlignment="Top" HorizontalAlignment="Left"
                     Style="{StaticResource MaterialDesignIconButton}"
-                    ToolTip="Отмена">
+                    ToolTip="Назад">
                     <materialDesign:PackIcon Kind="ArrowLeft" />
                 </Button>
                     <TextBlock
@@ -42,7 +42,7 @@
                     Margin="5 2"
                     VerticalAlignment="Top" HorizontalAlignment="Right"
                     Style="{StaticResource MaterialDesignIconButton}"
-                    ToolTip="Редактировать">
+                    ToolTip="Далее">
                     <materialDesign:PackIcon Kind="ArrowRight" />
                 </Button>
             </Grid>
