--- a/HotelManagement/Views/Pages/CheckInPage.xaml
+++ b/HotelManagement/Views/Pages/CheckInPage.xaml
@@ -131,6 +131,7 @@
                             Margin="5"
                             ItemsSource="{Binding Services}"
                             DisplayMemberPath="DisplayedName"
+                            MaxHeight="135"
                             SelectedValue="{Binding CurrentService, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             SelectedItem="{Binding CurrentService, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></ListBox>
                         <StackPanel Orientation="Horizontal">
